fixed css colors and spacing

--- a/src/helpers/styles/_colors.scss
+++ b/src/helpers/styles/_colors.scss
@@ -11,16 +11,6 @@
     --accent: hsla(var(--accentHue), 100%, 50%, 1);
     --bg-grey: hsla(0, 0%, calc(50% + ((50% - var(--contrast) * 0.3))), var(--font-opacity));
     --fg-grey: hsla(0, 0%, calc(50% + ((50% - var(--contrast) * 0.7))), var(--font-opacity));
-
-    --spacing-x: 1rem;
-    --spacing-y: 1rem;
-    --content-width:  #{$lg-width};
-    --line-width: .2rem;
-
-    --z-overlay: 100;
-    --z-header: 90;
-    --z-menu: 110;
-    --z-below: -1;
 }
 
 ::selection {
