--- a/src/helpers/styles/_darkMode.scss
+++ b/src/helpers/styles/_darkMode.scss
@@ -4,7 +4,7 @@
     --background-inverted: hsla(0, 0%, 10%, var(--background-opacity));
     --font: hsla(0, 0%, var(--contrast), var(--font-opacity));
     --font-inverted: hsla(0, 0%, var(--contrast), var(--font-opacity));
-    --bg-grey: hsla(0, 0%, calc(var(--contrast) * 0.2), var(--font-opacity));
+    --bg-grey: hsla(0, 0%, calc(var(--contrast) * 0.3), var(--font-opacity));
     --fg-grey: hsla(0, 0%, calc(var(--contrast) * 0.8), var(--font-opacity));
 }
 
