--- a/src/helpers/styles/_typography.scss
+++ b/src/helpers/styles/_typography.scss
@@ -29,32 +29,20 @@ a[href] {
     }
 }
 
+h1, h2, h3, h4, h5, h6 {
+    a[id] {
+        &::after {
+            content: "#";
+            margin-left: 0.4ch;
+            color: var(--bg-grey);
+        }
+    }
+}
+
 h1 {
     font-size: 2em;
 
     &:first-of-type {
         margin-top: 0;
-    }
-}
-
-blockquote {
-    position: relative;
-    margin-block-start: var(--spacing-y);
-    margin-block-end: var(--spacing-y);
-    margin-inline-start: var(--spacing-x);
-    margin-inline-end: var(--spacing-x);
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: calc(var(--spacing-x) * -1);
-        width: 1px;
-        height: 100%;
-        border-left: var(--line-width) dashed var(--bg-grey);
-    }
-
-    > footer {
-        margin-top: calc(var(--spacing-y) / 2);
     }
 }
